--- a/app/src/main/res/layout/cardview_sun.xml
+++ b/app/src/main/res/layout/cardview_sun.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textSun"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="8dp"
-        android:text="Sunrise &amp; Sunset" />
+        android:text="@string/sunrise_amp_sunset" />
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardview_sunset_sunrise"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -25,7 +26,7 @@
             android:padding="10dp">
 
             <ImageView
-                android:id="@+id/imageSunrise"
+                android:id="@+id/image_sunrise"
                 android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:layout_alignParentStart="true"
@@ -33,24 +34,24 @@
                 app:srcCompat="@drawable/sunrise" />
 
             <TextView
-                android:id="@+id/textSunrise"
+                android:id="@+id/text_sunrise_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/imageSunrise"
+                android:layout_toEndOf="@+id/image_sunrise"
                 android:text="07:47"
                 android:textColor="@android:color/black" />
 
             <ImageView
-                android:id="@+id/imageSunset"
+                android:id="@+id/image_sunset"
                 android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:layout_alignParentTop="true"
-                android:layout_toStartOf="@+id/textSunset"
+                android:layout_toStartOf="@+id/text_sunset_time"
                 app:srcCompat="@drawable/sunset" />
 
             <TextView
-                android:id="@+id/textSunset"
+                android:id="@+id/text_sunset_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
