--- a/app/src/main/res/layout/cardview_temp.xml
+++ b/app/src/main/res/layout/cardview_temp.xml
@@ -6,16 +6,17 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textCity"
+        android:id="@+id/text_city_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:gravity="center_horizontal"
-        android:text="Esch-sur-Alzette"
+        android:text="@string/city_name"
         android:textColor="@android:color/black"
         android:textSize="24sp" />
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardview_temperature"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -27,7 +28,7 @@
             android:padding="10dp">
 
             <ImageView
-                android:id="@+id/imageTempSign"
+                android:id="@+id/image_temp_sign"
                 android:layout_width="50dp"
                 android:layout_height="70dp"
                 android:layout_alignParentStart="true"
@@ -36,7 +37,7 @@
                 app:srcCompat="@drawable/temperature" />
 
             <ImageView
-                android:id="@+id/imageIcon"
+                android:id="@+id/image_weather_icon"
                 android:layout_width="150dp"
                 android:layout_height="100dp"
                 android:layout_alignParentEnd="true"
@@ -46,53 +47,53 @@
                 app:srcCompat="@drawable/clear_day" />
 
             <TextView
-                android:id="@+id/textTemp"
+                android:id="@+id/text_temp_val"
                 android:layout_width="90dp"
                 android:layout_height="70dp"
                 android:layout_alignParentTop="true"
-                android:layout_toEndOf="@+id/imageTempSign"
+                android:layout_toEndOf="@+id/image_temp_sign"
                 android:gravity="center_vertical|center_horizontal|center"
                 android:text="10°"
                 android:textColor="@android:color/black"
                 android:textSize="54sp" />
 
             <TextView
-                android:id="@+id/textTempDayMax"
+                android:id="@+id/text_temp_daily_max_val"
                 android:layout_width="wrap_content"
                 android:layout_height="18dp"
-                android:layout_below="@+id/imageTempSign"
+                android:layout_below="@+id/image_temp_sign"
                 android:layout_marginEnd="12dp"
                 android:layout_marginRight="4dp"
-                android:layout_toStartOf="@+id/textTempDayMin"
+                android:layout_toStartOf="@+id/text_temp_daily_min_val"
                 android:text="max 14°"
                 android:textColor="@android:color/black" />
 
             <TextView
-                android:id="@+id/textTempDayMin"
+                android:id="@+id/text_temp_daily_min_val"
                 android:layout_width="wrap_content"
                 android:layout_height="18dp"
-                android:layout_alignEnd="@+id/textTemp"
-                android:layout_below="@+id/textTemp"
+                android:layout_alignEnd="@+id/text_temp_val"
+                android:layout_below="@+id/text_temp_val"
                 android:text="min 9°"
                 android:textColor="@android:color/black" />
 
             <TextView
-                android:id="@+id/textLastUpdated"
+                android:id="@+id/text_lastupdate_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
-                android:text="03:05 08.10.2017"
+                android:text="@string/last_update_time"
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/textSummary"
+                android:id="@+id/text_summary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/textLastUpdated"
-                android:layout_alignBottom="@+id/textLastUpdated"
+                android:layout_alignBaseline="@+id/text_lastupdate_time"
+                android:layout_alignBottom="@+id/text_lastupdate_time"
                 android:layout_alignParentStart="true"
-                android:text="Rain throughout the day."
+                android:text="@string/weather_summary"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
