--- a/app/src/main/res/layout/cardview_wind.xml
+++ b/app/src/main/res/layout/cardview_wind.xml
@@ -6,13 +6,14 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textWind"
+        android:id="@+id/text_wind"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="8dp"
-        android:text="Wind" />
+        android:text="@string/wind" />
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardview_wind"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -21,11 +22,10 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            >
+            android:padding="10dp">
 
             <ImageView
-                android:id="@+id/imageWindTurbine"
+                android:id="@+id/image_windturbine"
                 android:layout_width="100dp"
                 android:layout_height="60dp"
                 android:layout_alignParentStart="true"
@@ -33,7 +33,7 @@
                 app:srcCompat="@drawable/windturbine" />
 
             <TextView
-                android:id="@+id/textView35"
+                android:id="@+id/text_wind_direction"
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
@@ -42,41 +42,41 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginStart="21dp"
                 android:layout_marginTop="10dp"
-                android:layout_toEndOf="@+id/imageWindTurbine"
+                android:layout_toEndOf="@+id/image_windturbine"
                 android:gravity="center_vertical"
-                android:text="Direction" />
+                android:text="@string/direction" />
 
             <TextView
-                android:id="@+id/textView37"
+                android:id="@+id/text_wind_speed"
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/textView35"
-                android:layout_below="@+id/textView35"
+                android:layout_alignStart="@+id/text_wind_direction"
+                android:layout_below="@+id/text_wind_direction"
                 android:layout_centerHorizontal="false"
                 android:layout_centerInParent="false"
                 android:layout_centerVertical="false"
                 android:gravity="center_vertical"
-                android:text="Speed" />
+                android:text="@string/speed" />
 
             <TextView
-                android:id="@+id/textWindDirection"
+                android:id="@+id/text_wind_direction_val"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/textView35"
-                android:layout_alignBottom="@+id/textView35"
+                android:layout_alignBaseline="@+id/text_wind_direction"
+                android:layout_alignBottom="@+id/text_wind_direction"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="33dp"
-                android:text="WSW"
+                android:text="@string/wind_direction"
                 android:textColor="@android:color/black" />
 
             <TextView
-                android:id="@+id/textWindSpeed"
+                android:id="@+id/text_wind_speed_val"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/textView37"
-                android:layout_alignBottom="@+id/textView37"
-                android:layout_alignEnd="@+id/textWindDirection"
-                android:text="23 km/hour"
+                android:layout_alignBaseline="@+id/text_wind_speed"
+                android:layout_alignBottom="@+id/text_wind_speed"
+                android:layout_alignEnd="@+id/text_wind_direction_val"
+                android:text="@string/wind_speed"
                 android:textColor="@android:color/black" />
 
         </RelativeLayout>
