--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mySwipeRefreshLayout"
+    android:id="@+id/layout_swipe_refresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="16dp"
@@ -9,12 +9,14 @@
     tools:layout_editor_absoluteY="8dp">
 
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/view_nested_scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp">
 
         <include
+            android:id="@+id/include_main"
             layout="@layout/content_scrolling"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
