--- a/app/src/main/res/layout/cardview_wind.xml
+++ b/app/src/main/res/layout/cardview_wind.xml
@@ -1,86 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cardview_wind"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_marginBottom="8dp"
+    android:orientation="vertical"
+    app:cardUseCompatPadding="true">
 
-    <TextView
-        android:id="@+id/text_wind"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="8dp"
-        android:text="@string/wind" />
+        android:padding="10dp">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardview_wind"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:orientation="vertical">
+        <ImageView
+            android:id="@+id/image_windturbine"
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            app:srcCompat="@drawable/windturbine" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/text_wind_direction"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:padding="10dp">
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="false"
+            android:layout_centerVertical="false"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="21dp"
+            android:layout_marginTop="10dp"
+            android:layout_toEndOf="@+id/image_windturbine"
+            android:gravity="center_vertical"
+            android:text="@string/direction" />
 
-            <ImageView
-                android:id="@+id/image_windturbine"
-                android:layout_width="100dp"
-                android:layout_height="60dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                app:srcCompat="@drawable/windturbine" />
+        <TextView
+            android:id="@+id/text_wind_speed"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/text_wind_direction"
+            android:layout_below="@+id/text_wind_direction"
+            android:layout_centerHorizontal="false"
+            android:layout_centerInParent="false"
+            android:layout_centerVertical="false"
+            android:gravity="center_vertical"
+            android:text="@string/speed" />
 
-            <TextView
-                android:id="@+id/text_wind_direction"
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="false"
-                android:layout_centerVertical="false"
-                android:layout_marginBottom="10dp"
-                android:layout_marginStart="21dp"
-                android:layout_marginTop="10dp"
-                android:layout_toEndOf="@+id/image_windturbine"
-                android:gravity="center_vertical"
-                android:text="@string/direction" />
+        <TextView
+            android:id="@+id/text_wind_direction_val"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/text_wind_direction"
+            android:layout_alignBottom="@+id/text_wind_direction"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="33dp"
+            android:text="@string/wind_direction"
+            android:textColor="@android:color/black" />
 
-            <TextView
-                android:id="@+id/text_wind_speed"
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/text_wind_direction"
-                android:layout_below="@+id/text_wind_direction"
-                android:layout_centerHorizontal="false"
-                android:layout_centerInParent="false"
-                android:layout_centerVertical="false"
-                android:gravity="center_vertical"
-                android:text="@string/speed" />
+        <TextView
+            android:id="@+id/text_wind_speed_val"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/text_wind_speed"
+            android:layout_alignBottom="@+id/text_wind_speed"
+            android:layout_alignEnd="@+id/text_wind_direction_val"
+            android:text="@string/wind_speed"
+            android:textColor="@android:color/black" />
 
-            <TextView
-                android:id="@+id/text_wind_direction_val"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/text_wind_direction"
-                android:layout_alignBottom="@+id/text_wind_direction"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="33dp"
-                android:text="@string/wind_direction"
-                android:textColor="@android:color/black" />
+    </RelativeLayout>
 
-            <TextView
-                android:id="@+id/text_wind_speed_val"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/text_wind_speed"
-                android:layout_alignBottom="@+id/text_wind_speed"
-                android:layout_alignEnd="@+id/text_wind_direction_val"
-                android:text="@string/wind_speed"
-                android:textColor="@android:color/black" />
-
-        </RelativeLayout>
-
-    </android.support.v7.widget.CardView>
-
-</LinearLayout>
+</android.support.v7.widget.CardView>
